kinda fixed navbar wrapping

--- a/projectStyles.css
+++ b/projectStyles.css
@@ -38,7 +38,8 @@ h1 {
 
 .brand {
     font-size: 2em;
-    padding: 10px;
+    padding: 1vw;
+    white-space: nowrap;
 }
 
 .nav-links {
@@ -50,11 +51,8 @@ h1 {
 
 .nav-links li {
     margin: 5px 50px;
-    padding: 10px;
-}
-
-.nav-links li:last-child {
-    margin-right: 0;
+    padding: 1vw;
+    white-space: nowrap;
 }
 
 .nav-links li a {
