--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,8 @@ h1 {
 
 .brand {
     font-size: 2em;
-    padding: 10px;
+    padding: 1vw;
+    white-space: nowrap;
 }
 
 .nav-links {
@@ -57,11 +58,8 @@ h1 {
 
 .nav-links li {
     margin: 5px 50px;
-    padding: 10px;
-}
-
-.nav-links li:last-child {
-    margin-right: 0;
+    padding: 1vw;
+    white-space: nowrap;
 }
 
 .nav-links li a {
